Fix stuck thumbnail loaders

--- a/frontend/resources/css/common.css
+++ b/frontend/resources/css/common.css
@@ -132,20 +132,30 @@ body {
 	100% { opacity: 1; }
 }
 
+.loader-supercontainer {
+	position: relative;
+}
+
 .loader-container {
 	padding: 1rem;
 	min-width: 150px;
 	width: 100%;
 	border-radius: 5px;
+
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 }
 
 .loader-container-content {
-	position: absolute;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	gap: 1rem;
+	height: 100%;
 }
 
 .loader-container .loader {
